# marlight-cli

./: CMakeLists.txt  LICENSE  README.md
debian/: changelog  control  copyright  libmarlight-dev.install  libmarlight.install  marlight-cli.install  rules
lib/: CMakeLists.txt  marlight.c  marlight.h
src/: main.cpp
